tests/derive_errors/enum/mixed.stderr
error: jtd-derive requires all enum variants to be of the same kind (unit-like or cstruct-like)
 --> tests/derive_errors/enum/mixed.rs:2:6
  |
2 | enum Mixed {
  |      ^^^^^
